--- a/Spring_SemesterProj.Rmd
+++ b/Spring_SemesterProj.Rmd
@@ -23,7 +23,7 @@ When we conduct hypothesis tests to compare the null against an alternative hypo
 Although useful to know for designing a research study, we do not always know the level of power in advance [@myorsStatisticalPowerAnalysis2014].  The probability of correctly rejecting the null hypothesis varies with sample size, effect size, and criterion for rejection. We also do not know the three determinants in advance. However, a few considerations should be made.
 
 ### Sample size
-Power varies with size of samples [@crumpChapter12Thinking2019; @myorsStatisticalPowerAnalysis2014]. Given that estimated standard deviation is the same, larger sample sizes decrease sampling error.  Reduced sampling size is optimal, as it increases precision of statistical tests to distinguish treatment effects from differences occurring due to sampling error.  Small sample sizes leading to unstable results are more prone to Type II error (i.e., missing the treatment effect). With other things constant, power varies with sample size.
+Power varies with size of samples [@crumpChapter12Thinking2019; @myorsStatisticalPowerAnalysis2014]. Given that estimated standard deviation is the same, larger sample sizes decrease sampling error.  Reduced sampling size is optimal, as it increases precision of statistical tests to distinguish treatment effects from differences occurring due to sampling error[@myorsStatisticalPowerAnalysis2014].  Small sample sizes leading to unstable results are more prone to Type II error (i.e., missing the treatment effect)[@myorsStatisticalPowerAnalysis2014]. With other things constant, power varies with sample size.
 ```{r}
 library(pwr)
 num_subjects <- seq(10,1000,length.out=20)
@@ -43,8 +43,10 @@ ggplot(plot_df, aes(x=num_subjects,
   geom_line()+
   ggtitle("Power as a function of sample sizes")
 ```
+
 ### Effect size
-One of the most common effect size measurements is Cohen’s d, which is a standardized mean difference indicating how much impact a treatment has on the dependent variable. Effect sizes are classified as small, medium, and large–approximately .2, .5, and .8, respectively.  All other things equal, a large effect size makes it easy to detect a treatment effect; whereas a very small effect size may not reliably detect a treatment effect.  In other words, power increases with increasing effect size.
+
+One of the most common effect size measurements is Cohen’s d, which is a standardized mean difference indicating how much impact a treatment has on the dependent variable [@crumpChapter12Thinking2019; @myorsStatisticalPowerAnalysis2014]. Effect sizes are classified as small, medium, and large–approximately .2, .5, and .8, respectively [@myorsStatisticalPowerAnalysis2014].  All other things equal, a large effect size makes it easy to detect a treatment effect; whereas a very small effect size may not reliably detect a treatment effect.  In other words, power increases with increasing effect size.
 ```{r}
 library(pwr)
 effect_sizes <- seq(0,2,.1)
@@ -64,8 +66,10 @@ ggplot(plot_df, aes(x=effect_sizes,
   geom_line()+
   ggtitle("Power as a function of effect sizes")
 ```
+
 ### Decision criterion
-When setting the alpha criterion, the goal is to minimize Type I errors. In other words, a researcher often determines the criterion value with the interest of not rejecting the null when it is actually true. An alpha criterion of .05, rather than .01, is more often used. This lenient standard (i.e., larger alpha criterion) makes it easier to reject the null hypothesis. With other things equal, a larger alpha criterion increases the probability of rejecting the null hypothesis, when the alternative hypothesis is true. As demonstrated in the plot below, power (orange region) is greater when the alpha criterion value is larger. 
+
+When setting the alpha criterion, the goal is to minimize Type I errors [@myorsStatisticalPowerAnalysis2014]. In other words, a researcher often determines the criterion value with the interest of not rejecting the null when it is actually true. An alpha criterion of .05, rather than .01, is more often used. This lenient standard (i.e., larger alpha criterion) makes it easier to reject the null hypothesis. With other things equal, a larger alpha criterion increases the probability of rejecting the null hypothesis, when the alternative hypothesis is true. As demonstrated in the plot below, power (orange region) is greater when the alpha criterion value is larger. 
 ```{r}
 library(ggplot2)
 library(patchwork)
@@ -143,12 +147,12 @@ A+B
 ```
 
 ## Practical
-Power analysis is useful in both planning and diagnosis of research study design. During planning, power is frequently used to determine the sample size for the alpha criterion of significance.  As a diagnostic tool, researchers can identify if there is a enough design for power in the design, or learn about the reliable effect size needed to achieve a certain level of power.  Such versatility is due to the fact that power is a function of sample size, effect size, and alpha criterion.
+Power analysis is useful in both planning and diagnosis of research study design [@myorsStatisticalPowerAnalysis2014]. During planning, power is frequently used to determine the sample size for the alpha criterion of significance [@myorsStatisticalPowerAnalysis2014].  As a diagnostic tool, researchers can identify if there is a enough design for power in the design, or learn about the reliable effect size needed to achieve a certain level of power [@myorsStatisticalPowerAnalysis2014].  Such versatility is due to the fact that power is a function of sample size, effect size, and alpha criterion.
 
-In this section, we will walk through the example cases in which we will discover the appropriate sample and effect sizes to achieve power in an experiment.  Note that the power of .80 is conventionally used, which we adopt in our examples.  This value can vary for specific purposes, but the use of the convention seems reasonable according to documented evidence.  Our example explores cases with .05 alpha criterion.
+In this section, we will walk through the example cases in which we will discover the appropriate sample and effect sizes to achieve power in an experiment.  Note that the power of .80 is conventionally used, which we adopt in our examples.  This value can vary for specific purposes, but the use of the convention seems reasonable according to documented evidence [@myorsStatisticalPowerAnalysis2014].  Our example explores cases with .05 alpha criterion.
 
 ### Case 1: Determining the sample size for an experiment
-As discussed in the concept section, a large number of samples increases power, which can cause concerns about Type I error (i.e., reject the null when there is no effect).  On the other hand, too little power can cause researchers to make a Type II error of failing to reject the null and miss the true effect.  This trade-off between two types of errors warrants a power analysis to determine the optimal sample size.  We would like to find out the range of sample sizes that would help us reach the .80 level of power.  Learning about the minimum sample size would be helpful to design an experiment without wasting additional time and resources.
+As discussed in the concept section, a large number of samples increases power, which can cause concerns about Type I error (i.e., reject the null when there is no effect) [@myorsStatisticalPowerAnalysis2014].  On the other hand, too little power can cause researchers to make a Type II error of failing to reject the null and miss the true effect [@myorsStatisticalPowerAnalysis2014].  This trade-off between two types of errors warrants a power analysis to determine the optimal sample size.  We would like to find out the range of sample sizes that would help us reach the .80 level of power.  Learning about the minimum sample size would be helpful to design an experiment without wasting additional time and resources.
 
 Let’s say we are designing an experiment on the efficacy of study skills training.  The experimental group will receive an 8-week training program and the controls will receive none.  Test scores will then be compared between groups.  Based on the previous literature, we estimate that the effect size of the training is d=.40.  We want to achieve the power of .80, with the alpha criterion of .05.  What would be the range and the minimum sample size required to detect that the training makes a difference in students’ test performance?
 ```{r}
@@ -201,8 +205,10 @@ ggplot(plot_df, aes(x=effect_sizes,
           Independent samples t-test")
 ```
 Looking at the result, we can see that effect sizes of more than d=.5 (medium effect) are required to achieve the experimental goal.
-Power analysis is versatile because power is a function of effect size, sample size, and the decision criterion for determining significance.  If you know any one of four values (including power), you can solve for the remaining three values.  As introduced in the example above, we can use the conventional values such as an alpha criterion of .05 and power level of .80 in determining other values.  That said, these conventions are useful, but not obligatory, for researchers.  The level of power at .80 is a reasonable convention supported well by previous literature.  For example, correctly rejecting the false null hypothesis is four times as likely for the power of .80.
-Though power analysis is seemingly useful in research designs, we must consider its related complexities.  Achieving high power is not easy.  For example, the level of power is often small in the social and behavioral sciences. This may be related to many factors including the field’s vulnerabilities to resources and luck to achieve a large sample size. Whereas larger effect sizes increase power, its flexibility is limited. In fact, they are always estimates, which are substantially based on theoretical and empirical research in many fields.  Further limiting the ability to adjust the determining values for power is the alpha criterion.  Specifically, the trade-off between Type I and Type II error imposes a limit to adjusting the decision criterion to being more liberal than an alpha criterion of .05.  In spite of these challenges, thoughtful application of power analysis in any statistical hypothesis testing is useful to justify a researchers’ rigorous effort.
+
+Power analysis is versatile because power is a function of effect size, sample size, and the decision criterion for determining significance [@myorsStatisticalPowerAnalysis2014].  If you know any one of four values (including power), you can solve for the remaining three values [@myorsStatisticalPowerAnalysis2014].  As introduced in the example above, we can use the conventional values such as an alpha criterion of .05 and power level of .80 in determining other values.  That said, these conventions are useful, but not obligatory, for researchers.  The level of power at .80 is a reasonable convention supported well by previous literature.  For example, correctly rejecting the false null hypothesis is four times as likely for the power of .80 [@myorsStatisticalPowerAnalysis2014].
+
+Though power analysis is seemingly useful in research designs, we must consider its related complexities.  Achieving high power is not easy.  For example, the level of power is often small in the social and behavioral sciences [@myorsStatisticalPowerAnalysis2014]. This may be related to many factors including the field’s vulnerabilities to resources and luck to achieve a large sample size. Whereas larger effect sizes increase power, its flexibility is limited. In fact, they are always estimates, which are substantially based on theoretical and empirical research in many fields [@myorsStatisticalPowerAnalysis2014].  Further limiting the ability to adjust the determining values for power is the alpha criterion.  Specifically, the trade-off between Type I and Type II error imposes a limit to adjusting the decision criterion to being more liberal than an alpha criterion of .05.  In spite of these challenges, thoughtful application of power analysis in any statistical hypothesis testing is useful to justify a researchers’ rigorous effort.
    
 ## Generalization Problem
 1a.  Let’s say we want to re-design the previously mentioned investigation into study skills training.  We think that there will be too much individual difference among available participants, such that we want to see whether students’ performance will improve if they receive an 8-week training program.  We plan to have each participant take a test before and after the training.  Based on the previous literature, we estimate that the training’s effect size is d=.40.  We want to achieve a power of .80, with an alpha criterion of .05.  What would be the minimum sample size required to detect the improvement the training would make on the students’ test performance?  Plot to show the range of values of sample sizes for this design.
